Separate state and command descriptions for locks
I had to use a DynamicStateDescriptionProvider instead of just putting
the command description on the ChannelType, since I ran into serialization
issues with the AbstractStorageBasedTypeProvider.

Signed-off-by: Cody Cutrer <cody@cutrer.us>